Remove use of z-index in easter egg to prevent bug on Safari iOS

--- a/app/pages/settings/settings.scss
+++ b/app/pages/settings/settings.scss
@@ -23,12 +23,12 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
         opacity: 0;
         height: 100%;
         width: 100vw;
         background-color: #000000;
         transition: opacity 0.2s;
+        pointer-events: none;
     }
 
     .illuminati-wrapper {
@@ -38,7 +38,7 @@
         height: 100%;
         width: 100vw;
         opacity: 0;
-        z-index: -1;
+        pointer-events: none;
 
         .they, .are, .watching, .you {
             font-family: serif;
@@ -47,7 +47,7 @@
             transform: translateX(100vw);
             text-align: center;
             position: absolute;
-            top: calc(50% - 48px - 12px);
+            top: calc(50vh - 48px - 12px - 49px);
             left: 0;
             color: white;
             width: 100%;
@@ -132,13 +132,11 @@
 
     &.illuminati {
         .backdrop {
-            z-index: 99999;
             opacity: 0.7;
             animation: fadeOutBackdrop 0.2s ease-in 4.85s forwards;
         }
 
         .illuminati-wrapper {
-            z-index: 999999;
             opacity: 1;
             animation: fadeOut 0.2s ease-in 4.85s forwards;
 
